--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "clsx": "^2.1.1",
     "firebase": "^11.1.0",
     "lucide-react": "^0.469.0",
+    "next-themes": "^0.4.4",
     "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.1",
+    "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
