--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.1.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
     "next-themes": "^0.4.4",
     "query-string": "^9.1.1",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@tanstack/react-query-devtools": "^5.64.1",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^22.10.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
